deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apps-test
spec:
  type: ClusterIP
  selector:
    app: apps-test
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
